--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "bethehero_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,18 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "celebrate": "^12.1.0",
+    "axios": "^1.6.8",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.2",
-    "express": "^4.17.1",
-    "knex": "^0.20.13",
-    "nodemailer": "^6.4.6",
-    "nodemailer-express-handlebars": "^4.0.0",
-    "sqlite3": "^4.1.1"
-  },
-  "devDependencies": {
-    "jest": "^25.4.0",
-    "nodemon": "^2.0.2",
-    "supertest": "^4.0.2"
+    "cross-env": "^7.0.3",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "knex": "^3.1.0",
+    "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2",
+    "nodemon": "^3.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.4"
   }
 }
