--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "build": [
         {
             "src": "src/server.js",
-            "use": "@/vercel/node"
+            "use": "@vercel/node"
         }
     ],
     "routes": [
