--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
     "version": 2,
-    "build": [
-        {
-            "src": "src/server.js",
-            "use": "@vercel/node"
-        }
-    ],
+    "build": {
+        "src": "src/server.js",
+        "use": "@vercel/node"
+    },
     "routes": [
         {
             "src": "/(.*)",
