fix version node

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "21.7.1"
+    "node": "20.x"
   },
   "scripts": {
     "start": "node src/server.js",
