--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon src/server.js",
     "test": "cross-env NODE_ENV=test jest",
     "deploy": "vercel --prod"
   },
